--- a/portfolio/templates/layout.html
+++ b/portfolio/templates/layout.html
@@ -17,7 +17,8 @@
 
   {% include 'partials/navbar.html' %}
 
-  <div class="container p-4">
+  {% comment %} <div class="container p-4"> {% endcomment %}
+  <div class=" ">
   
     {% block content %}
     {% endblock %}
