--- a/portfolio/templates/home.html
+++ b/portfolio/templates/home.html
@@ -6,19 +6,34 @@
 <!-- Style of the plugin -->
 <link rel="stylesheet" href="{% static 'components/Font Awesome/css/font-awesome.min.css' %}">
 <link rel="stylesheet" href="{% static 'whatsapp-chat-support.css' %}">
+<link rel="stylesheet" href="{% static 'style.css' %}">
+<link rel="stylesheet" href="{% static 'fonts.css' %}">
+<link rel="stylesheet" href="{% static 'bootstrap.css' %}">
+<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
 
 <style>
 
-  .section {
+ .foto{
+  background-image: url("{{ imgHeader.image.url }}");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; /* Fija la imagen al hacer scroll */
+  width: 100%;
+  height: 100vh;
+  clip-path: ellipse(100% 70% at 60% 30%);
+ }
+
+  .section_first {
     width: 100%;
-    height: 500px; /* Ajusta la altura según tus necesidades */
+    min-height: 600px; /* Ajusta la altura según tus necesidades */
     overflow: hidden; /* Para asegurar que la imagen no sobresalga */
   }
-
-  .full-width-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Hace que la imagen cubra el área sin distorsionarse */
+  .section-dos{
+    height: 750px; /* Ajusta la altura según tus necesidades */
+    
   }
 
   .full-width-img {
@@ -26,6 +41,8 @@
     height: 100%;
     object-fit: cover; /* Hace que la imagen cubra el área sin distorsionarse */
   }
+
+  
 
   .cristal{
     width:80%;
@@ -69,6 +86,15 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
 
+  /* bordes*/
+  .border-redondo{
+    border-radius: 20px;
+  }
+  .border-redondo-derecho{
+    border-radius: 0px 20px 20px 0px;
+    /*box-shadow: 3px 8px 20px 0 rgba(255, 220, 37, 0.2);*/
+  }
+
   /* Animación para desplazamiento continuo */
   @keyframes scroll {
     0% {
@@ -81,142 +107,203 @@
       transform: translateX(-100%);
     }
   }
+
+
+  .fondo-cards-sup {
+    background: #212529;
+    padding-top: 50px;
+    /*clip-path: ellipse(80% 70% at 30% 90%);*/
+    clip-path: ellipse(90% 70% at 20% 70%);
+    
+  }
+
+  .fondo-cards {
+    background: #212529;
+    padding-top: 50px;
+    /*clip-path: ellipse(90% 80% at 60% 20%);*/
+    /*clip-path: ellipse(100% 90% at 45% 10%);*/
+    /*clip-path: ellipse(100% 80% at 50% 20%);*/
+    clip-path: ellipse(100% 70% at 60% 30%);
+  }
+  .fondo-cards-sup-footer {
+    background: #212529;
+    padding-top: 50px;
+    clip-path: ellipse(100% 80% at 50% 80%);
+  }
+
+  
 </style>
 
 <!-- Hero Section -->
 
-<div class="section">
-  <img src="{{ imgHeader.image.url }}" class="full-width-img " alt="Slide {{ forloop.counter }}">  
-</div>
-{% comment %} <div class="row">
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="{% static 'portfolio/1.png' %}" class="d-block w-100" alt="Slide 1">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'portfolio/2.png' %}" class="d-block w-100" alt="Slide 2">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'portfolio/3.png' %}" class="d-block w-100" alt="Slide 3">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</div> {% endcomment %}
-
-
-<div class="row g-4 text-center mt-2">
-  <div class="col-12 col-md-6 w-25 mx-auto" >
-    {% if imgSpot %}
-      <img src="{{ imgSpot.image.url }}" class="img-fluid mx-auto d-block" />
-    {% else %}
-      <p>No hay imagen disponible.</p>
-    {% endif %}
-  </div>
-
-  <div class="col-12 col-md-6  p-4 "  >
-    {% if txtSpot %}
-    <h1 class="text-center pt-5"><strong>{{txtSpot.title}}</strong></h1>
-    
-    <p>"{{txtSpot.subtitle}}"</p>
-    {% comment %} <a class="btn btn-primary btn-lg rounded-0 my-3" href="{% static 'portfolio/cv.pdf' %}">Download my CV</a> {% endcomment %}
-    {% comment %} <a class="btn btn-success btn-lg rounded-0 my-3 " href="https://w.app/vA0WNK">{{txtSpot.title_boton}}</a> {% endcomment %}
-    
-    <a class="btn btn-success btn-sm" href="{% static 'portfolio/cv.pdf' %}" target="_blank">{{txtSpot.title_boton}}</a>
-    
-    {% else %}
-      <p>No hay texto disponible.</p>
-    {% endif %}
-    
-  </div>
+<div class="section section_first foto fondo-cards-principal">
+  <img src="{{ imgHeader.image.url }}" class="full-width-img foto d-none" alt="Slide {{ forloop.counter }}">  
 </div>
 
 
-<!-- Sección de Línea de Tiempo -->
-<div class="row text-center ">
-  <div class="timeline-wrapper">
-    <div class="timeline-container">
+<section class="section section-lg  bg-img-custom section-dos" id="about" >
+  <div class="container container-custom-left">
+    <div class="row justify-content-between row-60 row-md-30 flex-wrap-reverse flex-lg-wrap">
+      <div class="col-lg-7">
+        <div class="row row-41">
+          <div class="col-xs-4 maw-29">
+            <div class="row row-41">
+              <div class="col-12 ">
+                <div class="box-custom-3 wow fadeInLeft" data-wow-delay=".7s"><img class="mt-112 border-redondo-derecho" src="{{ imgHeader.image.url }}" alt="" width="226" height="261"/>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="box-custom-3 wow fadeInLeft" data-wow-delay=".8s"><img class="border-redondo-derecho" src="{{ imgHeader.image.url }}" alt="" width="226" height="564"/>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-8">
+            <div class="row row-41">
+              <div class="col-12">
+                <div class="box-custom-3 wow fadeInLeft " data-wow-delay=".5s"><img src="{{ imgSpot.image.url }}" class="border-redondo" alt="" width="560" height="564"/>
+                  <div class="box-custom-3-container">
+                    <div class="box-custom-3-wrap">
+                      <div class="box-custom-3-item">
+                        <p class="box-custom-3-name">Alice Merton</p>
+                        <p class="box-custom-3-position">Founder of “Interia”</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-7">
+                <div class="box-custom-3 box-custom-3-border wow fadeInLeft" data-wow-delay=".6s">
+                  <div class="box-custom-3-border-dashed"></div>
+                  <div class="box-custom-3-border-angel"></div><img class="border-redondo" src="{{ imgHeader.image.url }}" alt="" width="257" height="261"/>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-5 col-xxl-4">
+        <div class="box-custom-2">
+          <h2 class="wow fadeInRight" data-wow-delay=".5s">{{txtSpot.title}}</h2>
+          <p class="wow fadeInRight" data-wow-delay=".6s">{{txtSpot.subtitle}}</p>
+          <ul class="list index-list list-classic-wrap">
+            <li class="unit unit-spacing-lg align-items-start list-classic flex-column flex-xs-row wow fadeInRight" data-wow-delay=".7s">
+              {% comment %} unit-left list-index-counter {% endcomment %}
+              <div class="unit-left list-index-counter">
+                <div class="list-classic-rectangle"></div>
+                <div class="icon novi-icon linearicons-users2 icon-xl"></div>
+              </div>
+              <div class="unit-body">
+                <h4>Professional Team</h4>
+                <p>Our team includes only the best decorators and interior designers in the industry.</p>
+              </div>
+            </li>
+            <li class="unit unit-spacing-lg align-items-start list-classic flex-column flex-xs-row wow fadeInRight" data-wow-delay=".8s">
+              <div class="unit-left list-index-counter">
+                <div class="list-classic-rectangle"></div>
+                <div class="icon novi-icon linearicons-lamp icon-lg"></div>
+              </div>
+              <div class="unit-body">
+                <h4>Unusual Ideas</h4>
+                <p>Our designers generate various yet always original ideas that will surely fit your needs.</p>
+              </div>
+            </li>
+            <li class="unit unit-spacing-lg align-items-start list-classic flex-column flex-xs-row wow fadeInRight" data-wow-delay=".9s">
+              <div class="unit-left list-index-counter">
+                <div class="list-classic-rectangle"></div>
+                <div class="icon novi-icon linearicons-heart icon-lg"></div>
+              </div>
+              <div class="unit-body">
+                <h4>Made with Respect</h4>
+                <p>All our work is built around respect to our clients, great service, and creativity.</p>
+              </div>
+            </li>
+          </ul><a class="button button-primary button-shadow wow fadeInRight d-none" data-wow-delay="1s" href="#">Get a Quote</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="fondo-cards-sup " >
+</div>
+
+<section class="section   fondo-cards " id="portfolio">
+  
+  <div class="container ">
+    <div class="row row-30">
+      <div class="col-xl-6 col-md-6 wow fadeInLeft" data-wow-delay=".2s">
+        <h2 class="text-white">{{secc_uno.titulo_uno}}</h2>
+      </div>
+      <div class="col-xl-6 col-md-6 wow fadeInRight" data-wow-delay=".2s">
+        <h4 class="text-white">All our projects are unique and designed to last. Take a look at our recent works to find it out for yourself.</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="container container-custom-right d-flex">
+    <div class="owl-carousel owl-theme">
       {% for project in projects %}
-      <div class="timeline-item">
-        <img src="{{ project.image.url }}" class="timeline-img" alt="{{ project.title }}">
+      <div class="card ">
+        <div class="face front">
+            <img src="{{project.image.url }}" alt="">
+            <h3>{{ project.title }}</h3>
+        </div>
+        <div class="face back">
+            <h3 class="text-white">{{ project.title }}</h3>
+            <p class="text-white">{{ project.description }}</p>
+            <div class="link">
+              <a href="#"></a>
+            </div>          
+        </div>
       </div>
-      {% endfor %}
+      {% endfor %} 
     </div>
   </div>
-</div>
 
+</section>
 
-<!-- Porfolio Section -->
-<div class="row my-4 text-center">
-  <hr>
-  {% if secc_uno %}
-    <h2>{{secc_uno.titulo_uno}}</h2>
-  {% endif %}
-  <hr>
-  {% comment %} <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, aperiam?</p> {% endcomment %}
+<section class="section margintop  marginbottom" id="video">
 
-  {% for project in projects %}
-  <div class="col-12  col-md-4 d-flex justify-content-center p-4 ">
-    <div class="card card-project cristal ">
-      <img src="{{project.image.url }}" class="card-img-top borde-arriba" />
-
-      <div class="card-body ">
-
-        <h2>{{ project.title }}</h2>
-        <p>{{ project.description }}</p>
-
-        {% if project.url %}
-        <a href="{{project.url}}" class="btn btn-light rounded-0 btn-sm" target="__blank" rel="noreferrer">Visit the
-          Project</a>
-        {% endif %}
-      </div>
-    </div>
-  </div>
-  {% endfor %}
-</div>
-
-<div class="row my-4 text-center">
-  <hr>
-  {% if secc_dos %}
-  <h2>{{secc_dos.titulo_dos}}</h2>
-  {% endif %}
-  <hr>
-  <div class="col-12 d-flex justify-content-center video-container">
-    {% if video %}
-      {% if video.video_file %}
-        <!-- Reproducir video MP4 -->
-        <video width="560" height="315" controls>
-          <source src="{{ video.video_file.url }}" type="video/mp4">
-          Tu navegador no soporta el reproductor de video.
-        </video>
-      {% elif video.embed_url %}
-        <!-- Reproducir video de YouTube -->
-        <iframe width="560" height="315" 
-                src="{{ video.embed_url }}" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen>
-        </iframe>
-      {% endif %}
-    {% else %}
-      <p>No hay video disponible.</p>
+  <div class="container-fluid row text-center d-flex">
+   
+    {% if secc_dos %}
+    <h2>{{secc_dos.titulo_dos}}</h2>
     {% endif %}
+    <hr>
+    <div class="col d-flex justify-content-center video-container">
+      {% if video %}
+        {% if video.video_file %}
+          <!-- Reproducir video MP4 -->
+          <video width="560" height="315" controls>
+            <source src="{{ video.video_file.url }}" type="video/mp4">
+            Tu navegador no soporta el reproductor de video.
+          </video>
+        {% elif video.embed_url %}
+          <!-- Reproducir video de YouTube -->
+          <iframe width="560" height="315" 
+                  src="{{ video.embed_url }}" 
+                  title="YouTube video player" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen>
+          </iframe>
+        {% endif %}
+             
+      {% else %}
+        <p>No hay video disponible.</p>
+      {% endif %}
+    </div>
+    <div class="col ">
+      <p class="marginbottom"></p>
+      <h4>All our projects are unique and designed to last. Take a look at our recent works to find it out for yourself.</h4>
+      <p></p>
+    </div>
   </div>
-</div>
+</section>
+
+
+
 
 <!-- Button Whatsapp Structure -->
 <div class="whatsapp_chat_support wcs_fixed_right" id="button-w">
@@ -224,7 +311,7 @@
           Contáctanos
       </div>  
   <div class="wcs_button wcs_button_circle">
-      <span class="fa fa-whatsapp"></span>
+      <span class="fa fa-whatsapp "></span>
   </div>  
 
   <div class="wcs_popup">
@@ -250,20 +337,75 @@
   </div>
 </div>
 
+<footer class="section footer-classic bg-gray-900 novi-bg novi-bg-img bg-dark fondo-cards-sup-footer" >
+  <div class="container">
+    <div class="row row-30 justify-content-between">
+      <div class="col-xl-3 col-lg-3 col-sm-6">
+        <p class="footer-classic-title">Nuestra Dirección</p>
+        <ul class="footer-classic-list">
+          <li>Villa Carolina #147, Candora Urbanidad, León Gto.</li>
+        </ul>
+      </div>
+      <div class="col-xl-2 col-lg-2 col-sm-6">
+        <p class="footer-classic-title">Redes Sociales</p>
+        <ul class="footer-classic-list">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">YouTube</a></li>
+        </ul>
+      </div>
+      <div class="col-xl-2 col-lg-2 col-sm-6">
+        <p class="footer-classic-title">Télefono</p>
+        <ul class="footer-classic-list">
+          <li><a href="tel:#">+52 4779198052</a></li>
+        </ul>
+      </div>
+      <div class="col-xl-2 col-lg-3 col-sm-6">
+        <p class="footer-classic-title">Email</p>
+        <ul class="footer-classic-list">
+          <li><a href="mailto:#">oswaldo.herrera.mx@gmail.com</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-classic-logo-wrap"><a class="brand" href="index.html"><img src="images/logo-default-189x35.png" alt="logotipo" width="189" height="35"/></a>
+    </div>
+    <p class="rights"><span>&copy;&nbsp; </span><span class="copyright-year"></span><span>&nbsp;</span><span>OSHER</span><span>. All Rights Reserved. Design by OSHER</span></p>
+  </div>
+</footer>
+
 <!-- Incluye los scripts whatsapp-->
 <script src="{% static 'components/jQuery/jquery-1.11.3.min.js' %}"></script>
 <script src="{% static 'components/moment/moment.min.js' %}"></script>
 <script src="{% static 'components/moment/moment-timezone-with-data.min.js' %}"></script>
 <script src="{% static 'whatsapp-chat-support.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script>
  $('#button-w').whatsappChatSupport({
       defaultMsg : '',
   });
 </script>
 
+<script>
+  $(document).ready(function(){
+      $(".owl-carousel").owlCarousel({
+          loop: true,
+          margin: 20,
+          nav: true, /* Activa las flechas */
+          dots: false, /* Desactiva los puntos */
+          navText: ["<span class='owl-prev'>&#10094;</span>", "<span class='owl-next'>&#10095;</span>"],
+          responsive: {
+              0: { items: 1 },
+              768: { items: 2 },
+              1024: { items: 3 } /* Muestra 3 tarjetas en pantallas grandes */
+          }
+      });
+  });
+  </script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-P1Evxj3cP5PiBTfzk5R2e4Paq2C07fTKxtJFtSk7fjSAxXaT2z7QpD96zJe7bBtK" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9ZxA4E/9g3h1BfZA9e6p5gSx0e5Ht2jvZGid3F5Dti3HgkJQj6V6jF" crossorigin="anonymous"></script>
-
+<script src="{% static 'core.min.js' %}" ></script>
+<script src="{% static 'script.js' %}"></script>
 
 {% endblock %}
