--- a/portfolio/templates/login.html
+++ b/portfolio/templates/login.html
@@ -3,76 +3,98 @@
 
 {% load static %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94rHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="{% static 'main.css' %}">
 
 <style>
     body {
-        background: black;
+        /*background: linear-gradient(135deg, #000428, #004e92);*/
+        background-image: url(https://images.pexels.com/photos/169789/pexels-photo-169789.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         color: white;
         height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
-        /*margin: 0;
-        width:100%;*/
     }
 
     .form-container {
-        background-color: #333;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        background-color: rgba(255, 255, 255, 0.1);
+        padding: 30px;
+        border-radius: 15px;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         max-width: 400px;
         width: 100%;
-        
+        backdrop-filter: blur(10px);
+    }
+
+    .form-container input {
+        text-align: center; /* Centra el texto dentro del input */
+        display: block;
+        margin: 0 auto; /* Centra el input horizontalmente */
+        width: 100%; /* Ajusta el ancho */
+        height:5%;
     }
 
     .form-container h2 {
         text-align: center;
         margin-bottom: 20px;
+        font-weight: bold;
     }
 
 
+    .form-control {
+        background: rgba(255, 255, 255, 0.2);
+        border: none;
+        color: white;
+        width:100px;
+        padding: 10px;
+    }
 
+    .form-control:focus {
+        background: rgba(255, 255, 255, 0.3);
+        box-shadow: none;
+    }
+
+    .btn-login {
+        background:rgb(181, 184, 186);
+        border: none;
+        width: 100%;
+        padding: 10px;
+        transition: 0.3s;
+    }
+
+    .btn-login:hover {
+        background:rgb(54, 54, 55);
+        color:white;
+    }
 </style>
 
-<div class="row">
-    {% comment %} <div class="col">
-        <img src="{{ image.image.url }}" class="d-block w-100" alt="Slide {{ forloop.counter }}">
-    </div> {% endcomment %}
-    <div class="col">
-
-        <div class="form-container">
-            <h2>Iniciar sesión</h2>
-            <form method="post">
-                {% csrf_token %}
-                <!-- Aplicar la clase form-control a los campos -->
-                {% for field in form %}
-                    <div class="mb-3">
-                        {{ field.label_tag }}
-                        <br>
-                        
-                        {{ field }}
-                        <br>
-                        
-                        {{ field.errors }}
-                    </div>
-                {% endfor %}
+<div class="form-container text-center">
+    <h2>Iniciar sesión</h2>
+    <form method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            <div class="mb-3 ">
+                {{ field.label_tag }}
                 <br>
-                <button class="btn btn-secondary" type="submit">Iniciar sesión</button>
-            </form>
-        </div>
-    </div>
+                {{ field }}
+                <br>
+                {{ field.errors }}
+                <br>
+            </div>
+        {% endfor %}
+        <br>
+        <button class="btn btn-secondary btn-login" type="submit">Iniciar sesión</button>
+    </form>
 </div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-P1Evxj3cP5PiBTfzk5R2e4Paq2C07fTKxtJFtSk7fjSAxXaT2z7QpD96zJe7bBtK" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9ZxA4E/9g3h1BfZA9e6p5gSx0e5Ht2jvZGid3F5Dti3HgkJQj6V6jF" crossorigin="anonymous"></script>
 
-
 {% endblock %}
-
 
 
 
